--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,6 @@ plugins:
   - jekyll-redirect-from
   - jekyll-paginate
   - jekyll-assets
-  - jekyll-redirect-from
 
 source: _source
 destination: dist
@@ -25,7 +24,7 @@ kramdown:
   syntax_highlighter: rouge
   toc_levels: 1..3
 
-permalink: /blog/:year/:month/:day/:title
+permalink: /blog/:year/:month/:day/:title.html
 
 support_phone_number: "1-888-722-7871"
 github_base_url: "https://github.com/okta/okta.github.io/tree/source/_source/"
@@ -41,7 +40,6 @@ ga_ua_id: "UA-15777010-3"
 production_url: "https://developer.okta.com"
 
 include: [_static, .nojekyll, .woff, .tff]
-
 
 assets:
   compress:
@@ -61,25 +59,32 @@ assets:
     automatic_img_alt : true
 
 collections:
-  standards:
+  3rd_party_notices:
     output: true
+    permalink: /:collection/:path:output_ext
+  authentication-guide:
+    output: true
+    permalink: /:collection/:path:output_ext
   code:
     output: true
     permalink: /:collection/:path:output_ext
-  use_cases:
+  docs:
     output: true
-  authentication-guide:
+    permalink: /:collection/:path:output_ext
+  documentation:
+    output: true
+  quickstarts:
     output: true
     permalink: /:collection/:path:output_ext
   reference:
     output: true
-  3rd_party_notices:
-    output: true
-  docs:
+    permalink: /:collection/:path:output_ext
+  standards:
     output: true
     permalink: /:collection/:path:output_ext
-  quickstarts:
+  use_cases:
     output: true
+    permalink: /:collection/:path:output_ext
 
 paginate: 10
 paginate_path: "/blog/page/:num"
